# experiments

./: pyproject.toml
mlflow_test/: exp.py  test_config.yaml
mlops_test/: config.yml  get_data.py  script_mlflow.py
mlops_test/notebooks/: notebook copy.ipynb  notebook.ipynb
mlruns/0/: meta.yaml
mlruns/454143720584700814/: meta.yaml
mlruns/454143720584700814/036450c850f44cf1b51d17971ddab710/: meta.yaml
mlruns/454143720584700814/5c8aaf1cf53d49e683df5bfe9f147d1b/: meta.yaml
mlruns/454143720584700814/9eed4934145a41ad85aac3f3398639b3/: meta.yaml
mlruns/454143720584700814/9f4f49cb3cb649feb238038b10611c09/: meta.yaml
mlruns/454143720584700814/ad38a7dd1f414d209ae074142ecdd95a/: meta.yaml
mlruns/454143720584700814/cf6e19d4295b4b198582bd5abab6a288/: meta.yaml
mlruns/454143720584700814/cf9be8d412ed4f3f85aaa6c0dcb24ce3/: meta.yaml
mlruns/454143720584700814/d27b29f5052e4311a3785579a3dd841c/: meta.yaml
mlruns/454143720584700814/d82e779eb87247c1804f1be19e3285d1/: meta.yaml
mlruns/454143720584700814/de25f90e062848da8a50ad4f1e427c88/: meta.yaml
mlruns/691545211176375364/: meta.yaml
mlruns/691545211176375364/0072af54d37b4b4db8793e1bdd234793/: meta.yaml
mlruns/691545211176375364/0b873569bd4f4fa49aaafe764c25428a/: meta.yaml
mlruns/691545211176375364/3285d82f73cf4ad58a74acd59119e315/: meta.yaml
mlruns/691545211176375364/61acf4c23c8f4b6bb622ab0437a2fe74/: meta.yaml
mlruns/691545211176375364/6c3f5a2962bd484db51609c87dc6b557/: meta.yaml
mlruns/691545211176375364/b1cb311a46764308af9d6544ece88982/: meta.yaml
mlruns/952837429942556291/: meta.yaml
(+216 files in other folders)
