[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Thomás Freire <thomas.fsr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.0"
mlflow = "^2.13.1"
yfinance = "^0.2.40"
seaborn = "^0.13.2"
ccxt = "^4.3.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
